<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_dialog_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="400dip"
        android:layout_height="200dip"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_xml_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dialog_tishi"
            android:layout_marginTop="10dip"
            android:textColor="#99000000"
            android:textSize="26sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="10dip"
            android:background="#11000000" />

        <TextView
            android:id="@+id/delete_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/dialog_title"
            android:textColor="#99000000"
            android:textSize="20sp" />

       
		 <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginTop="30dp"
            android:background="#11000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/delete_ok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dialog_tishi2"
                android:textColor="#BBFF0000"
                android:textSize="20sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#11000000" />

            <TextView
                android:id="@+id/delete_no"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dialog_tishi3"
                android:textColor="#88000000"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>